--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_riverpod: ^2.2.0
+  dio: ^5.0.0
+  logger: ^1.1.0
+  riverpod_annotation: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +43,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  riverpod_generator: ^1.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
